; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/kmtests/kmtest/extr_service.c_KmtServiceCleanup.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/kmtests/kmtest/extr_service.c_KmtServiceCleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_SUCCESS = common dso_local global i32 0, align 4
@ScmHandle = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @KmtServiceCleanup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @ERROR_SUCCESS, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i64, i64* @ScmHandle, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i64, i64* @ScmHandle, align 8
  %9 = call i32 @CloseServiceHandle(i64 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %7
  %12 = load i32, i32* %2, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @error(i32 %15)
  br label %17

17:                                               ; preds = %14, %11, %7, %1
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @CloseServiceHandle(i64) #1

declare dso_local i32 @error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
